Wave Fixing Contrast  Error

--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -1,3 +1,6 @@
 .form-control{
     width: auto;
 }
+#id_body {
+    width: auto;
+}
